# HytaleClient

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: windows-build.yml  windows-release.yml
Client/: CMakeLists.txt  Client.cpp  Client.h  Memory.cpp  Memory.h  Module.h  ModuleManager.cpp  ModuleManager.h  dllmain.cpp
Client/Modules/: ConsoleModule.cpp  ConsoleModule.h  GameTickModule.cpp  GameTickModule.h  ImGuiModule.cpp  ImGuiModule.h  PlayerInfoModule.cpp  PlayerInfoModule.h  StaminaModule.cpp  StaminaModule.h  TeleportModule.cpp  TeleportModule.h
Client/SDK/: HytaleSDK.cpp  HytaleSDK.h  SDK.h
Injector/: CMakeLists.txt  Injector.cpp  Injector.h  main.cpp
